@@ -4334,13 +4334,13 @@
     ],
     "gold": 2500,
     "name": "Dilong, Nature Dragon",
-    "note": "<Armor Weakness: Piercing>\n<Element: Earth, Wind, Light>\n<Passive State: 145>\n\n<Sideview Battler: Dilong>\n<Scale Sprite: 200%>\n<Sideview No Collapse>\n<Floating>\n<Floating Rate: 0.025>\n<Attack Animation: 106>\n<HP Gauge Width: 360>\n\n<AI Priority>\nUser HP% param <= 75% +++ Eval $gameVariables.value(53) === 0: Draconic Healing\nUser HP% param <= 50% +++ Eval $gameVariables.value(53) === 1: Draconic Healing\nUser HP% param <= 25% +++ Eval $gameVariables.value(53) === 2: Draconic Healing\nUser HP% param <= 10% +++ Eval $gameVariables.value(53) === 3: Draconic Healing\n\nUser HP% param > 75% +++ Turn % 4 === 1: Future Sight, Highest HP\nUser HP% param > 75% +++ Turn % 4 === 2: Cyclone\nUser HP% param > 75% +++ Turn % 4 === 3: Spike Shock\nUser HP% param > 75% +++ Turn % 4 === 0: Spike Shock\n\nUser HP% param > 50% +++ Turn % 8 === 1: Future Sight, Highest HP\nUser HP% param > 50% +++ Turn % 8 === 2: Cyclone\nUser HP% param > 50% +++ Turn % 8 === 3: Spike Shock\nUser HP% param > 50% +++ Turn % 8 === 4: Spike Shock\nUser HP% param > 50% +++ Turn % 8 === 5: Future Sight, Highest HP\nUser HP% param > 50% +++ Turn % 8 === 6: Immortal Spears\nUser HP% param > 50% +++ Turn % 8 === 7: Spike Shock\nUser HP% param > 50% +++ Turn % 8 === 0: Spike Shock\n\nUser HP% param > 25% +++ Turn % 8 === 1: Future Sight, Highest HP\nUser HP% param > 25% +++ Turn % 8 === 2: Cyclone\nUser HP% param > 25% +++ Turn % 8 === 3: Giga Spike Shock\nUser HP% param > 25% +++ Turn % 8 === 4: Spike Shock\nUser HP% param > 25% +++ Turn % 8 === 5: Future Sight, Highest HP\nUser HP% param > 25% +++ Turn % 8 === 6: Immortal Spears\nUser HP% param > 25% +++ Turn % 8 === 7: Giga Spike Shock\nUser HP% param > 25% +++ Turn % 8 === 0: Spike Shock\n\nUser HP% param > 10% +++ Turn % 8 === 1: Immortal Spears\nUser HP% param > 10% +++ Turn % 8 === 2: Cyclone\nUser HP% param > 10% +++ Turn % 8 === 3: Giga Spike Shock\nUser HP% param > 10% +++ Turn % 8 === 4: Spike Shock\nUser HP% param > 10% +++ Turn % 8 === 5: Immortal Spears\nUser HP% param > 10% +++ Turn % 8 === 6: Immortal Spears\nUser HP% param > 10% +++ Turn % 8 === 7: Giga Spike Shock\nUser HP% param > 10% +++ Turn % 8 === 0: Spike Shock\n\nTurn % 3 === 1: Wyvern's Fury\nTurn % 3 === 2: Immortal Spears\nTurn % 3 === 0: Spike Shock\n</AI Priority>\n\n<Enemy Drops>\nDilong's Tear: 100%\nLife Crystal: 100%\nEnchanted Dragon Scale: 100%\nEnchanted Dragon Scale: 100%\nEnchanted Dragon Scale: 50%\nEnchanted Dragon Scale: 50%\nEnchanted Dragon Scale: 25%\nEnchanted Dragon Scale: 25%\nEnchanted Dragon Scale: 12.5%\nEnchanted Dragon Scale: 12.5%\nDragon Scale: 100%\nDragon Scale: 100%\nDragon Scale: 100%\nDragon Scale: 50%\nDragon Scale: 50%\nDragon Scale: 50%\nDragon Scale: 25%\nDragon Scale: 25%\nDragon Scale: 25%\nDragon Scale: 12.5%\nDragon Scale: 12.5%\nDragon Scale: 12.5%\nDragonfruit: 50%\nDragonfruit: 50%\nDragonfruit: 50%\nEarth Essence: 100%\nEarth Essence: 100%\nEarth Essence: 100%\nEarth Essence: 100%\nEarth Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\n</Enemy Drops>\n\n<Conditional Dragon Scale Helmet Drop>\nEval Date.now() % 2 === 0: +100%\n</Conditional Dragon Scale Helmet Drop>\n\n<Conditional Sorrowful Headpiece Drop>\nEval Date.now() % 2 === 1: +100%\n</Conditional Sorrowful Headpiece Drop>",
+    "note": "<Armor Weakness: Piercing>\n<Element: Earth, Wind, Light>\n<Passive State: 145>\n\n<Sideview Battler: Dilong>\n<Scale Sprite: 200%>\n<Sideview No Collapse>\n<Floating>\n<Floating Rate: 0.025>\n<Attack Animation: 106>\n<HP Gauge Width: 360>\n\n<AI Priority>\nUser HP% param <= 80% +++ Eval $gameVariables.value(53) === 0: Draconic Healing\nUser HP% param <= 60% +++ Eval $gameVariables.value(53) === 1: Draconic Healing\nUser HP% param <= 40% +++ Eval $gameVariables.value(53) === 2: Draconic Healing\nUser HP% param <= 20% +++ Eval $gameVariables.value(53) === 3: Draconic Healing\n\nUser HP% param > 75% +++ Turn % 4 === 1: Future Sight, Highest HP\nUser HP% param > 75% +++ Turn % 4 === 2: Cyclone\nUser HP% param > 75% +++ Turn % 4 === 3: Spike Shock\nUser HP% param > 75% +++ Turn % 4 === 0: Spike Shock\n\nUser HP% param > 50% +++ Turn % 8 === 1: Future Sight, Highest HP\nUser HP% param > 50% +++ Turn % 8 === 2: Cyclone\nUser HP% param > 50% +++ Turn % 8 === 3: Spike Shock\nUser HP% param > 50% +++ Turn % 8 === 4: Spike Shock\nUser HP% param > 50% +++ Turn % 8 === 5: Future Sight, Highest HP\nUser HP% param > 50% +++ Turn % 8 === 6: Immortal Spears\nUser HP% param > 50% +++ Turn % 8 === 7: Spike Shock\nUser HP% param > 50% +++ Turn % 8 === 0: Spike Shock\n\nUser HP% param > 25% +++ Turn % 8 === 1: Future Sight, Highest HP\nUser HP% param > 25% +++ Turn % 8 === 2: Cyclone\nUser HP% param > 25% +++ Turn % 8 === 3: Giga Spike Shock\nUser HP% param > 25% +++ Turn % 8 === 4: Spike Shock\nUser HP% param > 25% +++ Turn % 8 === 5: Future Sight, Highest HP\nUser HP% param > 25% +++ Turn % 8 === 6: Immortal Spears\nUser HP% param > 25% +++ Turn % 8 === 7: Giga Spike Shock\nUser HP% param > 25% +++ Turn % 8 === 0: Spike Shock\n\nUser HP% param > 10% +++ Turn % 8 === 1: Immortal Spears\nUser HP% param > 10% +++ Turn % 8 === 2: Cyclone\nUser HP% param > 10% +++ Turn % 8 === 3: Giga Spike Shock\nUser HP% param > 10% +++ Turn % 8 === 4: Spike Shock\nUser HP% param > 10% +++ Turn % 8 === 5: Immortal Spears\nUser HP% param > 10% +++ Turn % 8 === 6: Immortal Spears\nUser HP% param > 10% +++ Turn % 8 === 7: Giga Spike Shock\nUser HP% param > 10% +++ Turn % 8 === 0: Spike Shock\n\nTurn % 3 === 1: Wyvern's Fury\nTurn % 3 === 2: Immortal Spears\nTurn % 3 === 0: Spike Shock\n</AI Priority>\n\n<Enemy Drops>\nDilong's Tear: 100%\nLife Crystal: 100%\nEnchanted Dragon Scale: 100%\nEnchanted Dragon Scale: 100%\nEnchanted Dragon Scale: 50%\nEnchanted Dragon Scale: 50%\nEnchanted Dragon Scale: 25%\nEnchanted Dragon Scale: 25%\nEnchanted Dragon Scale: 12.5%\nEnchanted Dragon Scale: 12.5%\nDragon Scale: 100%\nDragon Scale: 100%\nDragon Scale: 100%\nDragon Scale: 50%\nDragon Scale: 50%\nDragon Scale: 50%\nDragon Scale: 25%\nDragon Scale: 25%\nDragon Scale: 25%\nDragon Scale: 12.5%\nDragon Scale: 12.5%\nDragon Scale: 12.5%\nDragonfruit: 50%\nDragonfruit: 50%\nDragonfruit: 50%\nEarth Essence: 100%\nEarth Essence: 100%\nEarth Essence: 100%\nEarth Essence: 100%\nEarth Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\n</Enemy Drops>\n\n<Conditional Dragon Scale Helmet Drop>\nEval Date.now() % 2 === 0: +100%\n</Conditional Dragon Scale Helmet Drop>\n\n<Conditional Sorrowful Headpiece Drop>\nEval Date.now() % 2 === 1: +100%\n</Conditional Sorrowful Headpiece Drop>",
     "params": [
-      45000,
+      30000,
       0,
       36,
       55,
-      65,
+      70,
       90,
       120,
       60
