@@ -10,6 +10,10 @@ Additions:
  - The music menu is back!
 
 Changes:
+ - Rebalanced Dilong:
+  ~ MHP: 45000 → 30000
+  ~ MAT: 65 → 70
+  ~ Draconic Healing Thresholds: 75% 50% 25% 10% → 80% 60% 40% 20%
  - Nerfed Bat Sling drop rate from 5% to 2%.
  - Removed Outgoing Elemental Damage in favor of just amplifying every element rate.
  - Reworked Attributes menu stat colorations.
